[gd_scene load_steps=20 format=3 uid="uid://cm0lw3nd0kw7d"]

[ext_resource type="Script" path="res://src/scenes/gameObjects/player/player.gd" id="1_ev1iy"]
[ext_resource type="Texture2D" uid="uid://dus1t4omt66pe" path="res://src/media/sprites/player/lilithIdleSheet19x128.png" id="2_d5ssh"]
[ext_resource type="PackedScene" uid="uid://cyc4eax6g4cjv" path="res://src/components/hurtboxComponent.tscn" id="2_v0tt5"]
[ext_resource type="PackedScene" uid="uid://dhgs7vny0y0xq" path="res://src/components/healthComponent.tscn" id="3_b752o"]
[ext_resource type="Texture2D" uid="uid://c7qwsubxwkjuf" path="res://src/media/sprites/player/lilithDuckSheet19x16.png" id="3_qatpp"]
[ext_resource type="Texture2D" uid="uid://bno1ityoac53x" path="res://src/media/sprites/player/lilithJumpSheet19x32.png" id="4_katjx"]
[ext_resource type="Texture2D" uid="uid://dj4stqasye0ja" path="res://src/media/sprites/player/lilithRunSheet19x128.png" id="5_a6rul"]

[sub_resource type="Animation" id="Animation_h43l2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_d5ssh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_n06re"]
resource_name = "anim_duck"
length = 0.05
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_qatpp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_i23dv"]
resource_name = "anim_idle"
length = 0.8
loop_mode = 1
step = 0.125
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_d5ssh")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.125, 0.25, 0.375, 0.5, 0.625, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 7]
}

[sub_resource type="Animation" id="Animation_ofp21"]
resource_name = "anim_jump"
length = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_katjx")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_epnq1"]
resource_name = "anim_run"
length = 0.5
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/Body:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_a6rul")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/Body:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [10]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Visuals/Body:vframes")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Visuals/Body:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g70rx"]
_data = {
"RESET": SubResource("Animation_h43l2"),
"anim_duck": SubResource("Animation_n06re"),
"anim_idle": SubResource("Animation_i23dv"),
"anim_jump": SubResource("Animation_ofp21"),
"anim_run": SubResource("Animation_epnq1")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ocmmf"]
size = Vector2(7, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mvywc"]
size = Vector2(7, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_83qob"]
size = Vector2(7, 7)

[sub_resource type="Gradient" id="Gradient_dsnpq"]
offsets = PackedFloat32Array(0, 0.641509)
colors = PackedColorArray(1, 1, 1, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_743rw"]
gradient = SubResource("Gradient_dsnpq")
fill = 1
fill_from = Vector2(0.5, 0.491453)

[sub_resource type="Curve" id="Curve_cpgqp"]
_data = [Vector2(0, 1), 0.0, 0.0675827, 0, 0, Vector2(0.949153, 0.268041), -3.24399, -3.24399, 0, 0, Vector2(1, 0), -3.09653, 0.0, 0, 0]
point_count = 3

[node name="Player" type="CharacterBody2D" groups=["player"]]
script = ExtResource("1_ev1iy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g70rx")
}

[node name="PlayerDeathAnimationComponent" type="CanvasLayer" parent="."]
visible = false

[node name="HealthComponent" parent="." instance=ExtResource("3_b752o")]
metadata/_edit_lock_ = true

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("healthComponent", "hurtboxCollision") instance=ExtResource("2_v0tt5")]
healthComponent = NodePath("../HealthComponent")
hurtboxCollision = NodePath("CollisionShape2D")
metadata/_edit_lock_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_ocmmf")
debug_color = Color(0.721569, 0, 0.164706, 0.439216)
metadata/_edit_lock_ = true

[node name="NormalCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_mvywc")
metadata/_edit_lock_ = true

[node name="DuckCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2(0, -4)
shape = SubResource("RectangleShape2D_83qob")
disabled = true
metadata/_edit_lock_ = true

[node name="Visuals" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Body" type="Sprite2D" parent="Visuals"]
position = Vector2(0, -8)
texture = ExtResource("2_d5ssh")
hframes = 8
metadata/_edit_lock_ = true

[node name="ClimbLedgeGrabRaycasts" type="Node2D" parent="."]

[node name="TopRight" type="RayCast2D" parent="ClimbLedgeGrabRaycasts"]
position = Vector2(0, -15)
target_position = Vector2(-5, 0)
metadata/_edit_lock_ = true

[node name="TopLeft" type="RayCast2D" parent="ClimbLedgeGrabRaycasts"]
position = Vector2(0, -15)
target_position = Vector2(5, 0)
metadata/_edit_lock_ = true

[node name="MiddleRight" type="RayCast2D" parent="ClimbLedgeGrabRaycasts"]
position = Vector2(0, -7)
target_position = Vector2(5, 0)
metadata/_edit_lock_ = true

[node name="MiddleLeft" type="RayCast2D" parent="ClimbLedgeGrabRaycasts"]
position = Vector2(0, -7)
target_position = Vector2(-5, 0)
metadata/_edit_lock_ = true

[node name="ClimbWallRaycasts" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="TopRight" type="RayCast2D" parent="ClimbWallRaycasts"]
position = Vector2(0, -15)
target_position = Vector2(-5, 0)
metadata/_edit_lock_ = true

[node name="TopLeft" type="RayCast2D" parent="ClimbWallRaycasts"]
position = Vector2(0, -15)
target_position = Vector2(5, 0)
metadata/_edit_lock_ = true

[node name="BottomRight" type="RayCast2D" parent="ClimbWallRaycasts"]
target_position = Vector2(5, 0)
metadata/_edit_lock_ = true

[node name="BottomLeft" type="RayCast2D" parent="ClimbWallRaycasts"]
target_position = Vector2(-5, 0)
metadata/_edit_lock_ = true

[node name="Light" type="PointLight2D" parent="."]
position = Vector2(0, -8)
color = Color(0.190762, 0.190762, 0.190762, 0.168627)
texture = SubResource("GradientTexture2D_743rw")
metadata/_edit_lock_ = true

[node name="DashTrailLine" type="Line2D" parent="."]
top_level = true
position = Vector2(0, -7)
width = 2.0
metadata/_edit_lock_ = true

[node name="DashParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -7)
emitting = false
amount = 120
emission_shape = 1
emission_sphere_radius = 1.0
spread = 90.0
gravity = Vector2(0, 0)
initial_velocity_min = 12.0
initial_velocity_max = 12.0
scale_amount_curve = SubResource("Curve_cpgqp")
metadata/_edit_lock_ = true
